fix markdown scroll visually broken in classic.css

--- a/public/css/classic.css
+++ b/public/css/classic.css
@@ -630,6 +630,9 @@ span.tag {
 .upload-form-table .CodeMirror-scroll, .upload-form-table .CodeMirror {
     min-height: 120px;
 }
+.upload-form-table .CodeMirror-scroll {
+    max-width: unset!important;
+}
 
 .form-input.language {
     border-radius: 0;
